Tue, 04 Mar 2008 12:15:53 +0100 <thp@perli.net>
Fix KeyError bug in custom_selection_button_clicked (from LP)

	* src/gpodder/gui.py: Fix problem with localized strings on the custom
	selection buttons, i.e. pass the label to the function directly
	instead of relying on the gtk.Button to have the label in the correct
	encoding (LP: #192918); thanks to Pavel Mlčoch for reporting this bug
	on Launchpad

Tue, 04 Mar 2008 12:05:23 +0100 <thp@perli.net>
Fix AttributeError bug in updateTreeView (from LP)

	* src/gpodder/gui.py: Make sure that we have a valid "active_channel"
	when updating the tree view (LP: #183667); thanks to red26wings for
	reporting this bug on Launchpad

Mon, 03 Mar 2008 23:06:30 +0100 <thp@perli.net>
Add support for changing the URL of a subscribed channel (bug #42)

	* data/gpodder.glade: Make the URL entry in the channel dialog
	editable
	* src/gpodder/gui.py: Add support for changing the URL of a subscribed
	channel (i.e. move from the "latest" RSS feed to the "complete" RSS
	feed, as is the case with Chaosradio podcasts, for example); ask user
	if she really wants to move; handle case where the new URL is wrong
	by reverting to old URL; Improve code for moving the download
	directory; thanks to Steve Garcia <sgarcia@bak.rr.com> for the bug
	report

Mon, 03 Mar 2008 21:14:55 +0100 <thp@perli.net>
Small fix for moving downloads progress bar

	* src/gpodder/gui.py: Make sure the value for set_fraction of the
	progress bar is in 0.0..1.0

Mon, 03 Mar 2008 20:53:15 +0100 <thp@perli.net>
Add "Go to website" buttons to episode and channel (bug #43)

	* data/gpodder.glade: Add "Go to website" buttons to episode and
	channel info dialogs
	* src/gpodder/gui.py: Add code to open website URL or hide the "Go to
	website" button when there is no valid website link for an episode or
	channel

Mon, 03 Mar 2008 20:37:02 +0100 <thp@perli.net>
Move webbrowser code to util.open_website; fix URLs to gpodder.org

	* src/gpodder/gui.py: Use new gpodder.org URLs; use